--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "ww": "webpack --watch",
-    "server": "node ./backend/server.js"
+    "start": "node ./backend/server.js"
   },
   "author": "",
   "license": "ISC",
